[package]
edition = "2021"
name = "novelcrawl"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.0", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.0"
reqwest = {version="0.11", features=["json"]}
tokio = {version="1", features=["full"]}
futures = "0.3"
encoding = "0.2"
nipper = "0.1"

[build-dependencies]
napi-build = "1.2"

[profile.release]
lto = true
